crates/evm/src/snapshots/tempo_evm__evm__tests__tip20_full_evm_storage_actions_T0.snap
---
source: crates/evm/src/evm.rs
expression: snapshot
---
first_transfer:
  - "Sload(0x20c0000000000000000000000000000000000000, 4, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(0x20c0000000000000000000000000000000000000, 4, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(0xfeec000000000000000000000000000000000000, 13341414622131447727239737623912933846260708934217195870129718812047597002187, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 7, 1461501637330902918203684832716283019655932542976)"
  - "Sload(0x20c0000000000000000000000000000000000000, 12, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063165, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063166, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063167, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 15, 0)"
  - "Sdec(0x20c0000000000000000000000000000000000000, 66682263976337606493566815331606251743070623215951197526572265789005975498806, 1000)"
  - "Sload(0x20c0000000000000000000000000000000000000, 34611364585502274546990386504338161915004348512983514667530736996015347420159, 0)"
  - "Sstore(0x20c0000000000000000000000000000000000000, 34611364585502274546990386504338161915004348512983514667530736996015347420159, 1000)"
  - "Sload(0x20c0000000000000000000000000000000000000, 12, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 7, 1461501637330902918203684832716283019655932542976)"
  - "Sload(0x20c0000000000000000000000000000000000000, 66682263976337606493566815331606251743070623215951197526572265789005975498806, 999000)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063165, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063166, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063167, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 15, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 5325739843943643944934562186448523962721785808552279864384247438015665169259, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 5325739843943643944934562186448523962721785808552279864384247438015665169260, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 5325739843943643944934562186448523962721785808552279864384247438015665169261, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 15, 0)"
  - "Sstore(0x20c0000000000000000000000000000000000000, 66682263976337606493566815331606251743070623215951197526572265789005975498806, 998900)"
  - "Sload(0x20c0000000000000000000000000000000000000, 65170175512477342510801610333873207860054171647576107088189908311760365672706, 0)"
  - "Sstore(0x20c0000000000000000000000000000000000000, 65170175512477342510801610333873207860054171647576107088189908311760365672706, 100)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063165, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063166, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063167, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 15, 0)"
  - "Sdec(0x20c0000000000000000000000000000000000000, 34611364585502274546990386504338161915004348512983514667530736996015347420159, 947)"
  - "Sinc(0x20c0000000000000000000000000000000000000, 66682263976337606493566815331606251743070623215951197526572265789005975498806, 947)"
  - "Sload(0xfeec000000000000000000000000000000000000, 13341414622131447727239737623912933846260708934217195870129718812047597002187, 0)"
  - "Sload(0xfeec000000000000000000000000000000000000, 108309762801808287018800426352855041800235915699700764166992818877207792851405, 0)"
  - "Sstore(0xfeec000000000000000000000000000000000000, 108309762801808287018800426352855041800235915699700764166992818877207792851405, 53)"
second_transfer:
  - "Sload(0x20c0000000000000000000000000000000000000, 4, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(0x20c0000000000000000000000000000000000000, 4, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(0xfeec000000000000000000000000000000000000, 13341414622131447727239737623912933846260708934217195870129718812047597002187, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 7, 1461501637330902918203684832716283019655932542976)"
  - "Sload(0x20c0000000000000000000000000000000000000, 12, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063165, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063166, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063167, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 15, 0)"
  - "Sdec(0x20c0000000000000000000000000000000000000, 66682263976337606493566815331606251743070623215951197526572265789005975498806, 1000)"
  - "Sinc(0x20c0000000000000000000000000000000000000, 34611364585502274546990386504338161915004348512983514667530736996015347420159, 1000)"
  - "Sload(0x20c0000000000000000000000000000000000000, 12, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 7, 1461501637330902918203684832716283019655932542976)"
  - "Sload(0x20c0000000000000000000000000000000000000, 66682263976337606493566815331606251743070623215951197526572265789005975498806, 998847)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063165, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063166, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063167, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 15, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 5325739843943643944934562186448523962721785808552279864384247438015665169259, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 5325739843943643944934562186448523962721785808552279864384247438015665169260, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 5325739843943643944934562186448523962721785808552279864384247438015665169261, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 15, 0)"
  - "Sstore(0x20c0000000000000000000000000000000000000, 66682263976337606493566815331606251743070623215951197526572265789005975498806, 998747)"
  - "Sinc(0x20c0000000000000000000000000000000000000, 65170175512477342510801610333873207860054171647576107088189908311760365672706, 100)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063165, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063166, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 30257108330747917368824657595738750493730876006083964735565481516378608063167, 0)"
  - "Sload(0x20c0000000000000000000000000000000000000, 15, 0)"
  - "Sdec(0x20c0000000000000000000000000000000000000, 34611364585502274546990386504338161915004348512983514667530736996015347420159, 964)"
  - "Sinc(0x20c0000000000000000000000000000000000000, 66682263976337606493566815331606251743070623215951197526572265789005975498806, 964)"
  - "Sload(0xfeec000000000000000000000000000000000000, 13341414622131447727239737623912933846260708934217195870129718812047597002187, 0)"
  - "Sinc(0xfeec000000000000000000000000000000000000, 108309762801808287018800426352855041800235915699700764166992818877207792851405, 36)"
