crates/evm/src/snapshots/tempo_evm__evm__tests__tip20_full_evm_storage_actions_T10.snap
---
source: crates/evm/src/evm.rs
expression: snapshot
---
direct_first_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 25753363935580450050844441809117495216974099917897508283166760417670449172653, 18446744073709551617)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 1000000, 1000)"
  - "Sload(FEE_TOKEN, balances[FeeManager], 0)"
  - "Sstore(FEE_TOKEN, balances[FeeManager], 0, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170141183460469231731687303715884105728000000, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sdec(PATH_USD, balances[sender], 500000, 100)"
  - "Sload(PATH_USD, balances[recipient], 0)"
  - "Sstore(PATH_USD, balances[recipient], 0, 100)"
  - "Sload(STORAGE_CREDITS, storageCredits[PATH_USD], 0)"
  - "Sload(STORAGE_CREDITS, storageCredits[PATH_USD], 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1000, 460)"
  - "Sinc(FEE_TOKEN, balances[sender], 999000, 460)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170141183460469231731687303715884105728000000, 540)"
  - "Sload(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 0)"
  - "Sstore(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 0, 538)"
direct_second_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 25753363935580450050844441809117495216974099917897508283166760417670449172653, 18446744073709551617)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999460, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 540, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169958111547065766838344008177085814430237212, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sdec(PATH_USD, balances[sender], 499900, 100)"
  - "Sinc(PATH_USD, balances[recipient], 100, 100)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1540, 960)"
  - "Sinc(FEE_TOKEN, balances[sender], 998460, 960)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169958111547065766838344008177085814430237212, 40)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 538, 39)"
twohop_first_transfer:
  - "Sload(TWO_HOP_FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TWO_HOP_FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 114280001059145766545321959265703640305763107442585033346894498828783879959191, 18446744073709551617)"
  - "Sload(TWO_HOP_FEE_TOKEN, paused, 0)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[sender], 1000000, 1000)"
  - "Sload(TWO_HOP_FEE_TOKEN, balances[FeeManager], 0)"
  - "Sstore(TWO_HOP_FEE_TOKEN, balances[FeeManager], 0, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][PATH_USD], 0, 997, false)"
  - "Sload(TWO_HOP_FEE_TOKEN, quoteToken, 186969447744480744418635462015588811259792066345)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170141183460469231731687303715884105728000000, 997, true)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169944840534755850238268936567395975469990468, 994, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sdec(PATH_USD, balances[sender], 499800, 100)"
  - "Sinc(PATH_USD, balances[recipient], 200, 100)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[FeeManager], 1000, 960)"
  - "Sinc(TWO_HOP_FEE_TOKEN, balances[sender], 999000, 960)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170141183460469231731687303715884105728000000, 40)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169944840534755850238268936567395975469990468, 39)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 577, 38)"
twohop_second_transfer:
  - "Sload(TWO_HOP_FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TWO_HOP_FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 114280001059145766545321959265703640305763107442585033346894498828783879959191, 18446744073709551617)"
  - "Sload(TWO_HOP_FEE_TOKEN, paused, 0)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[sender], 999960, 1000)"
  - "Sinc(TWO_HOP_FEE_TOKEN, balances[FeeManager], 40, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][PATH_USD], 0, 997, false)"
  - "Sload(TWO_HOP_FEE_TOKEN, quoteToken, 186969447744480744418635462015588811259792066345)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170127912448159315131612232106194266767753256, 997, true)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169931909804812854576657328332313568277955179, 994, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sdec(PATH_USD, balances[sender], 499700, 100)"
  - "Sinc(PATH_USD, balances[recipient], 300, 100)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[FeeManager], 1040, 960)"
  - "Sinc(TWO_HOP_FEE_TOKEN, balances[sender], 998960, 960)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170127912448159315131612232106194266767753256, 40)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169931909804812854576657328332313568277955179, 39)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 615, 38)"
2d_nonce_first_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 0)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 0)"
  - "Sstore(NONCE_MANAGER, nonces[sender][42], 0, 1)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 25753363935580450050844441809117495216974099917897508283166760417670449172653, 18446744073709551617)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999420, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 580, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169918979074869858915045720097231161085919890, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sdec(PATH_USD, balances[sender], 499600, 100)"
  - "Sinc(PATH_USD, balances[recipient], 400, 100)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1580, 710)"
  - "Sinc(FEE_TOKEN, balances[sender], 998420, 710)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169918979074869858915045720097231161085919890, 290)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 653, 289)"
2d_nonce_second_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 1)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 1)"
  - "Sstore(NONCE_MANAGER, nonces[sender][42], 1, 2)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 25753363935580450050844441809117495216974099917897508283166760417670449172653, 18446744073709551617)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999130, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 870, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169820637470829707699104804835683380072809396, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sdec(PATH_USD, balances[sender], 499500, 100)"
  - "Sinc(PATH_USD, balances[recipient], 500, 100)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1870, 954)"
  - "Sinc(FEE_TOKEN, balances[sender], 998130, 954)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169820637470829707699104804835683380072809396, 46)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 942, 45)"
clear_balance_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 25753363935580450050844441809117495216974099917897508283166760417670449172653, 18446744073709551617)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999084, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 916, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169805324764318265468248952978348950503293922, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sload(PATH_USD, balances[sender], 499400)"
  - "Sstore(PATH_USD, balances[sender], 499400, 0)"
  - "Sload(STORAGE_CREDITS, storageCredits[PATH_USD], 0)"
  - "Sstore(STORAGE_CREDITS, storageCredits[PATH_USD], 0, 1)"
  - "Sinc(PATH_USD, balances[recipient], 600, 499400)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1916, 955)"
  - "Sinc(FEE_TOKEN, balances[sender], 998084, 955)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169805324764318265468248952978348950503293922, 45)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 987, 44)"
recreate_balance_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 25753363935580450050844441809117495216974099917897508283166760417670449172653, 18446744073709551617)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sdec(FEE_TOKEN, balances[recipient], 1000000, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 961, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169790352340173744175856564495621952701989903, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, 2870047017637108544950037820031935930543733549586861711754546765533666003180, 0)"
  - "Sdec(PATH_USD, balances[recipient], 500000, 100)"
  - "Sload(PATH_USD, balances[sender], 0)"
  - "Sstore(PATH_USD, balances[sender], 0, 100)"
  - "Sload(STORAGE_CREDITS, storageCredits[PATH_USD], 1)"
  - "Sload(STORAGE_CREDITS, storageCredits[PATH_USD], 1)"
  - "Sstore(STORAGE_CREDITS, storageCredits[PATH_USD], 1, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1961, 705)"
  - "Sinc(FEE_TOKEN, balances[recipient], 999000, 705)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169790352340173744175856564495621952701989903, 295)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 1031, 294)"
