crates/evm/src/snapshots/tempo_evm__evm__tests__tip20_full_evm_storage_actions_T11.snap
---
source: crates/evm/src/evm.rs
expression: snapshot
---
direct_first_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NATIVE_MULTISIG, accounts[sender], 0)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 25753363935580450050844441809117495216974099917897508283166760417670449172653, 18446744073709551617)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 1000000, 1000)"
  - "Sload(FEE_TOKEN, balances[FeeManager], 0)"
  - "Sstore(FEE_TOKEN, balances[FeeManager], 0, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170141183460469231731687303715884105728000000, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sdec(PATH_USD, balances[sender], 500000, 100)"
  - "Sload(PATH_USD, balances[recipient], 0)"
  - "Sstore(PATH_USD, balances[recipient], 0, 100)"
  - "Sload(STORAGE_CREDITS, storageCredits[PATH_USD], 0)"
  - "Sload(STORAGE_CREDITS, storageCredits[PATH_USD], 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1000, 670)"
  - "Sinc(FEE_TOKEN, balances[sender], 999000, 670)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170141183460469231731687303715884105728000000, 330)"
  - "Sload(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 0)"
  - "Sstore(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 0, 329)"
direct_second_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NATIVE_MULTISIG, accounts[sender], 0)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 25753363935580450050844441809117495216974099917897508283166760417670449172653, 18446744073709551617)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999670, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 330, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170029230561752242977207853470039053986431306, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sdec(PATH_USD, balances[sender], 499900, 100)"
  - "Sinc(PATH_USD, balances[recipient], 100, 100)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1330, 960)"
  - "Sinc(FEE_TOKEN, balances[sender], 998670, 960)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170029230561752242977207853470039053986431306, 40)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 329, 39)"
twohop_first_transfer:
  - "Sload(TWO_HOP_FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TWO_HOP_FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NATIVE_MULTISIG, accounts[sender], 0)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 114280001059145766545321959265703640305763107442585033346894498828783879959191, 18446744073709551617)"
  - "Sload(TWO_HOP_FEE_TOKEN, paused, 0)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[sender], 1000000, 1000)"
  - "Sload(TWO_HOP_FEE_TOKEN, balances[FeeManager], 0)"
  - "Sstore(TWO_HOP_FEE_TOKEN, balances[FeeManager], 0, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][PATH_USD], 0, 997, false)"
  - "Sload(TWO_HOP_FEE_TOKEN, quoteToken, 186969447744480744418635462015588811259792066345)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170141183460469231731687303715884105728000000, 997, true)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170015959549442326377132781860349215026184562, 994, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sdec(PATH_USD, balances[sender], 499800, 100)"
  - "Sinc(PATH_USD, balances[recipient], 200, 100)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[FeeManager], 1000, 960)"
  - "Sinc(TWO_HOP_FEE_TOKEN, balances[sender], 999000, 960)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170141183460469231731687303715884105728000000, 40)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170015959549442326377132781860349215026184562, 39)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 368, 38)"
twohop_second_transfer:
  - "Sload(TWO_HOP_FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(TWO_HOP_FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NATIVE_MULTISIG, accounts[sender], 0)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 114280001059145766545321959265703640305763107442585033346894498828783879959191, 18446744073709551617)"
  - "Sload(TWO_HOP_FEE_TOKEN, paused, 0)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[sender], 999960, 1000)"
  - "Sinc(TWO_HOP_FEE_TOKEN, balances[FeeManager], 40, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][PATH_USD], 0, 997, false)"
  - "Sload(TWO_HOP_FEE_TOKEN, quoteToken, 186969447744480744418635462015588811259792066345)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170127912448159315131612232106194266767753256, 997, true)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170003028819499330715521173625266807834149273, 994, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sdec(PATH_USD, balances[sender], 499700, 100)"
  - "Sinc(PATH_USD, balances[recipient], 300, 100)"
  - "Sdec(TWO_HOP_FEE_TOKEN, balances[FeeManager], 1040, 960)"
  - "Sinc(TWO_HOP_FEE_TOKEN, balances[sender], 998960, 960)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[TWO_HOP_FEE_TOKEN][FEE_TOKEN], 170127912448159315131612232106194266767753256, 40)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 170003028819499330715521173625266807834149273, 39)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 406, 38)"
2d_nonce_first_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NATIVE_MULTISIG, accounts[sender], 0)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 0)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 0)"
  - "Sstore(NONCE_MANAGER, nonces[sender][42], 0, 1)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 25753363935580450050844441809117495216974099917897508283166760417670449172653, 18446744073709551617)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999630, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 370, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169990098089556335053909565390184400642113984, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sdec(PATH_USD, balances[sender], 499600, 100)"
  - "Sinc(PATH_USD, balances[recipient], 400, 100)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1370, 935)"
  - "Sinc(FEE_TOKEN, balances[sender], 998630, 935)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169990098089556335053909565390184400642113984, 65)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 444, 64)"
2d_nonce_second_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NATIVE_MULTISIG, accounts[sender], 0)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 1)"
  - "Sload(NONCE_MANAGER, nonces[sender][42], 1)"
  - "Sstore(NONCE_MANAGER, nonces[sender][42], 1, 2)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 25753363935580450050844441809117495216974099917897508283166760417670449172653, 18446744073709551617)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999565, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 435, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169968320018073394992247909415308767476580865, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sdec(PATH_USD, balances[sender], 499500, 100)"
  - "Sinc(PATH_USD, balances[recipient], 500, 100)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1435, 954)"
  - "Sinc(FEE_TOKEN, balances[sender], 998565, 954)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169968320018073394992247909415308767476580865, 46)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 508, 45)"
clear_balance_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NATIVE_MULTISIG, accounts[sender], 0)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 25753363935580450050844441809117495216974099917897508283166760417670449172653, 18446744073709551617)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sdec(FEE_TOKEN, balances[sender], 999519, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 481, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169953007311561952761392057557974337907065391, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, receivePolicies[recipient], 0)"
  - "Sload(PATH_USD, balances[sender], 499400)"
  - "Sstore(PATH_USD, balances[sender], 499400, 0)"
  - "Sload(STORAGE_CREDITS, storageCredits[PATH_USD], 0)"
  - "Sstore(STORAGE_CREDITS, storageCredits[PATH_USD], 0, 1)"
  - "Sinc(PATH_USD, balances[recipient], 600, 499400)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1481, 960)"
  - "Sinc(FEE_TOKEN, balances[sender], 998519, 960)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169953007311561952761392057557974337907065391, 40)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 553, 39)"
recreate_balance_transfer:
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(FEE_TOKEN, currency, 38593709754705830669425512872126203978950497434864252488535995306481912119302)"
  - "Sload(NATIVE_MULTISIG, accounts[recipient], 0)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "Sload(TIP403_REGISTRY, 25753363935580450050844441809117495216974099917897508283166760417670449172653, 18446744073709551617)"
  - "Sload(FEE_TOKEN, paused, 0)"
  - "Sdec(FEE_TOKEN, balances[recipient], 1000000, 1000)"
  - "Sinc(FEE_TOKEN, balances[FeeManager], 521, 1000)"
  - "FeeAmmLiquidityCheck(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169939736299252036161316985948284498946818647, 997, true)"
  - "Sload(PATH_USD, paused, 0)"
  - "Sload(TIP403_REGISTRY, 10580841167589745256555125066498201604455262713089423050796677547729013916759, 18446744073709551617)"
  - "Sload(TIP403_REGISTRY, 2870047017637108544950037820031935930543733549586861711754546765533666003180, 0)"
  - "Sdec(PATH_USD, balances[recipient], 500000, 100)"
  - "Sload(PATH_USD, balances[sender], 0)"
  - "Sstore(PATH_USD, balances[sender], 0, 100)"
  - "Sload(STORAGE_CREDITS, storageCredits[PATH_USD], 1)"
  - "Sload(STORAGE_CREDITS, storageCredits[PATH_USD], 1)"
  - "Sstore(STORAGE_CREDITS, storageCredits[PATH_USD], 1, 0)"
  - "Sdec(FEE_TOKEN, balances[FeeManager], 1521, 915)"
  - "Sinc(FEE_TOKEN, balances[recipient], 999000, 915)"
  - "Sload(TIP_FEE_MANAGER, validatorTokens[beneficiary], 0)"
  - "FeeAmmSwap(TIP_FEE_MANAGER, pools[FEE_TOKEN][PATH_USD], 169939736299252036161316985948284498946818647, 85)"
  - "Sinc(TIP_FEE_MANAGER, collectedFees[beneficiary][PATH_USD], 592, 84)"
